test/fail/enums_and_variants/code_inside_enum_class_body.lly
#[
SyntaxError: Expected '}' or 'define', not 'a label'.
Where: File "code_inside_enum_class_body.lly" at line 13
]#

enum class Option[A] {
    Some(A),
    None

    define f() {
    }

    var @v = 10
}
